# light-filer

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: spec.md
docs/feedback/: sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.md  summary.md
scripts/: download_fonts.ps1
src/: app.rs  entry.rs  fonts.rs  fs.rs  icons.rs  log.rs  main.rs  settings.rs  state.rs  theme.rs
src/ui/: explorer.rs  mod.rs  modern.rs
