[package]
name = "filox"
version = "0.4.3"
edition = "2021"
description = "Fast, lightweight file manager for Windows"

[[bin]]
name = "filox"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_extras = "0.29"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
open = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
